[package]
name = "bing2bing-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio-serde = { version = "0.9", features = ["cbor", "messagepack", "json", "bincode"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
#tokio-stream = { version = "0.1" }
futures = { version = "0.3", features = ["thread-pool"]}
tracing = { version = "0.1", features = ["log"] }
# tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
clap = {version = "4.2", features = ["derive", "env", "unicode", "wrap_help"]}
rand = "0.8"
async-channel = "2.2"
dotenvy = "0.15"
async-trait = "0.1.68"


